--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta
-      name="keywords"
-      content="events in pune,pune upcoming events,events in pune today,events in pune this weekend,allevents pune,events in pune tomorrow,art events in pune,events in pune this weekend,allevents pune,events in pune tomorrow,art events in pune,teachers day 2022,thank a teacher day 2022,happy teachers day 2022,2022 teachers day,teachers day contest,teachers day competition for students,teachers day competition drawing,teachers day online competition ,teachers day card competition ,teachers day contest in pune 2022,events in pune 2022,events in pune today,events in pune next week,events in pune next weekend,greeting card contest in pune ,greeting card contest in pune maharashtra,online teachers day celebration ideas ,online teachers day celebration ideas for students,blinkit ,printout,blinkit printout,teachers day,happy teachers day,teachers day 2022,happy teachers day wishes,teachers day wishes,teachers day card,teacher appreciation day,teachers day greeting card,teachers day gift,happy teachers day card,teachers day greetings,teachers day celebration,happy teachers day greeting card,teachers day special,teachers day celebration ideas,event,events near me,events in pune,pune upcoming events,events in pune today,"
-    />
-
-    <!--  latest tag -->
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-G9YWFB83DB"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-G9YWFB83DB");
-    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="The Simplest Way To Get Free Printouts Delivered In Pune. Need Free Printouts? Now Free Prints Are Just a Click Away!."
+      content="this is an editor created by github.com/SDE-ADNAN ."
     />
-    <meta
-      name="google-site-verification"
-      content="Tjs0fKfZe5tguYj1dAJ_JCY9xfvzAIVMug1MaMAZj7k"
-    />
+
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
