--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>Ewayprint</title>
+    <title>EDITOR</title>
     <style>
       * {
         font-family: "Roboto", sans-serif;
